@@ -48,16 +48,16 @@ class SOLARUS_API CustomEntity: public Detector {
         const std::string& model
     );
 
-    virtual EntityType get_type() const override;
+    EntityType get_type() const override;
 
     const std::string& get_model() const;
 
     // Game loop.
-    virtual void notify_creating() override;
-    virtual void set_suspended(bool suspended) override;
-    virtual void notify_enabled(bool enabled) override;
-    virtual void update() override;
-    virtual void draw_on_map() override;
+    void notify_creating() override;
+    void set_suspended(bool suspended) override;
+    void notify_enabled(bool enabled) override;
+    void update() override;
+    void draw_on_map() override;
 
     // Direction.
     int get_sprites_direction() const;
@@ -72,8 +72,8 @@ class SOLARUS_API CustomEntity: public Detector {
     void set_traversable_by_entities(EntityType type, const ScopedLuaRef& traversable_test_ref);
     void reset_traversable_by_entities(EntityType type);
 
-    virtual bool can_be_obstacle() const override;
-    virtual bool is_obstacle_for(Entity& other) override;
+    bool can_be_obstacle() const override;
+    bool is_obstacle_for(Entity& other) override;
 
     // What this custom entity can traverse.
     void set_can_traverse_entities(bool traversable);
@@ -86,32 +86,32 @@ class SOLARUS_API CustomEntity: public Detector {
     );
     void reset_can_traverse_entities(EntityType type);
 
-    virtual bool is_hero_obstacle(Hero& hero) override;
-    virtual bool is_block_obstacle(Block& block) override;
-    virtual bool is_teletransporter_obstacle(Teletransporter& teletransporter) override;
-    virtual bool is_stream_obstacle(Stream& stream) override;
-    virtual bool is_stairs_obstacle(Stairs& stairs) override;
-    virtual bool is_sensor_obstacle(Sensor& sensor) override;
-    virtual bool is_switch_obstacle(Switch& sw) override;
-    virtual bool is_raised_block_obstacle(CrystalBlock& raised_block) override;
-    virtual bool is_crystal_obstacle(Crystal& crystal) override;
-    virtual bool is_npc_obstacle(Npc& npc) override;
-    virtual bool is_enemy_obstacle(Enemy& enemy) override;
-    virtual bool is_jumper_obstacle(Jumper& jumper, const Rectangle& candidate_position) override;
-    virtual bool is_destructible_obstacle(Destructible& destructible) override;
-    virtual bool is_separator_obstacle(Separator& separator) override;
+    bool is_hero_obstacle(Hero& hero) override;
+    bool is_block_obstacle(Block& block) override;
+    bool is_teletransporter_obstacle(Teletransporter& teletransporter) override;
+    bool is_stream_obstacle(Stream& stream) override;
+    bool is_stairs_obstacle(Stairs& stairs) override;
+    bool is_sensor_obstacle(Sensor& sensor) override;
+    bool is_switch_obstacle(Switch& sw) override;
+    bool is_raised_block_obstacle(CrystalBlock& raised_block) override;
+    bool is_crystal_obstacle(Crystal& crystal) override;
+    bool is_npc_obstacle(Npc& npc) override;
+    bool is_enemy_obstacle(Enemy& enemy) override;
+    bool is_jumper_obstacle(Jumper& jumper, const Rectangle& candidate_position) override;
+    bool is_destructible_obstacle(Destructible& destructible) override;
+    bool is_separator_obstacle(Separator& separator) override;
 
     bool can_traverse_ground(Ground ground) const;
     void set_can_traverse_ground(Ground ground, bool traversable);
     void reset_can_traverse_ground(Ground ground);
 
-    virtual bool is_low_wall_obstacle() const override;
-    virtual bool is_shallow_water_obstacle() const override;
-    virtual bool is_deep_water_obstacle() const override;
-    virtual bool is_hole_obstacle() const override;
-    virtual bool is_lava_obstacle() const override;
-    virtual bool is_prickle_obstacle() const override;
-    virtual bool is_ladder_obstacle() const override;
+    bool is_low_wall_obstacle() const override;
+    bool is_shallow_water_obstacle() const override;
+    bool is_deep_water_obstacle() const override;
+    bool is_hole_obstacle() const override;
+    bool is_lava_obstacle() const override;
+    bool is_prickle_obstacle() const override;
+    bool is_ladder_obstacle() const override;
 
     // Collisions.
     void add_collision_test(
@@ -124,42 +124,42 @@ class SOLARUS_API CustomEntity: public Detector {
     );
     void clear_collision_tests();
 
-    virtual bool test_collision_custom(Entity& entity) override;
-    virtual void notify_collision(
+    bool test_collision_custom(Entity& entity) override;
+    void notify_collision(
         Entity& entity_overlapping, CollisionMode collision_mode) override;
-    virtual void notify_collision(
+    void notify_collision(
         Entity& other_entity, Sprite& this_sprite, Sprite& other_sprite) override;
 
-    virtual void notify_collision_with_destructible(Destructible& destructible, CollisionMode collision_mode) override;
-    virtual void notify_collision_with_teletransporter(Teletransporter& teletransporter, CollisionMode collision_mode) override;
-    virtual void notify_collision_with_stream(Stream& stream, int dx, int dy) override;
-    virtual void notify_collision_with_stairs(Stairs& stairs, CollisionMode collision_mode) override;
-    virtual void notify_collision_with_jumper(Jumper& jumper, CollisionMode collision_mode) override;
-    virtual void notify_collision_with_sensor(
+    void notify_collision_with_destructible(Destructible& destructible, CollisionMode collision_mode) override;
+    void notify_collision_with_teletransporter(Teletransporter& teletransporter, CollisionMode collision_mode) override;
+    void notify_collision_with_stream(Stream& stream, int dx, int dy) override;
+    void notify_collision_with_stairs(Stairs& stairs, CollisionMode collision_mode) override;
+    void notify_collision_with_jumper(Jumper& jumper, CollisionMode collision_mode) override;
+    void notify_collision_with_sensor(
         Sensor& sensor, CollisionMode collision_mode) override;
-    virtual void notify_collision_with_switch(Switch& sw, CollisionMode collision_mode) override;
-    virtual void notify_collision_with_switch(Switch& sw, Sprite& sprite_overlapping) override;
-    virtual void notify_collision_with_crystal(Crystal& crystal, CollisionMode collision_mode) override;
-    virtual void notify_collision_with_crystal(Crystal& crystal, Sprite& sprite_overlapping) override;
-    virtual void notify_collision_with_chest(Chest& chest) override;
-    virtual void notify_collision_with_block(Block& block) override;
-    virtual void notify_collision_with_separator(Separator& separator, CollisionMode collision_mode) override;
-    virtual void notify_collision_with_bomb(Bomb& bomb, CollisionMode collision_mode) override;
-    virtual void notify_collision_with_explosion(Explosion& explosion, CollisionMode collision_mode) override;
-    virtual void notify_collision_with_explosion(Explosion& explosion, Sprite& sprite_overlapping) override;
-    virtual void notify_collision_with_fire(Fire& fire, Sprite& sprite_overlapping) override;
-    virtual void notify_collision_with_enemy(Enemy& enemy) override;
-    virtual void notify_collision_with_enemy(Enemy& enemy, Sprite& enemy_sprite, Sprite& this_sprite) override;
-    virtual bool notify_action_command_pressed() override;
-    virtual bool interaction_with_item(EquipmentItem& item) override;
+    void notify_collision_with_switch(Switch& sw, CollisionMode collision_mode) override;
+    void notify_collision_with_switch(Switch& sw, Sprite& sprite_overlapping) override;
+    void notify_collision_with_crystal(Crystal& crystal, CollisionMode collision_mode) override;
+    void notify_collision_with_crystal(Crystal& crystal, Sprite& sprite_overlapping) override;
+    void notify_collision_with_chest(Chest& chest) override;
+    void notify_collision_with_block(Block& block) override;
+    void notify_collision_with_separator(Separator& separator, CollisionMode collision_mode) override;
+    void notify_collision_with_bomb(Bomb& bomb, CollisionMode collision_mode) override;
+    void notify_collision_with_explosion(Explosion& explosion, CollisionMode collision_mode) override;
+    void notify_collision_with_explosion(Explosion& explosion, Sprite& sprite_overlapping) override;
+    void notify_collision_with_fire(Fire& fire, Sprite& sprite_overlapping) override;
+    void notify_collision_with_enemy(Enemy& enemy) override;
+    void notify_collision_with_enemy(Enemy& enemy, Sprite& enemy_sprite, Sprite& this_sprite) override;
+    bool notify_action_command_pressed() override;
+    bool interaction_with_item(EquipmentItem& item) override;
 
     // Observing the ground.
-    virtual bool is_ground_observer() const override;
-    virtual void notify_ground_below_changed() override;
+    bool is_ground_observer() const override;
+    void notify_ground_below_changed() override;
 
     // Modifying the ground.
-    virtual bool is_ground_modifier() const override;
-    virtual Ground get_modified_ground() const override;
+    bool is_ground_modifier() const override;
+    Ground get_modified_ground() const override;
     void set_modified_ground(Ground modified_ground);
 
   private:
